css/style.css
:root {
  --primary-color: #6c63ff;
  --secondary-color: #f5f2fe;
  --box-shadow: 0 5px 10px rgba(0, 0, 0, 0.3);
}

body {
  /* margin: 60px auto;
  max-width: 800px; */
  margin: 0 auto;
  max-width: 100%;
}

h1,
h2,
h3 {
  text-align: center;
  margin: 0;
}

h1{
  font-size: 96px;
}

.h1-class {
  font-size: 60px;
}

h2 {
  font-size: 48px;
}

h3 {
  font-size: 24px;
  opacity: 0.7;
}

p {
  background: var(--secondary-color);
  padding: 20px;
  border-radius: 4px;
  font-size: 18px;
  line-height: 1.5;
  text-align: center;
}


@media (max-width: 576px) {

  
  .col-sm-6 {
    margin-left: 20px
  }
   .h2-class {
    font-size: 35px;
   }

   h1{
    font-size: 48px;
   }
  
   .index-img {
    display: none;
   }

   .container p{
    text-align: center !important;
   }

   .container a {
    display: block;
    text-align: center !important;
   }

   .h1-class {
    font-size: 30px;
    text-align: center !important;
   }
}

.margin-topper {
  margin-top: 10px;
}

.wrapper {
  margin-top: 100px;
  /* padding-top: 10px; */
}

.navigation-links {
  display: flex;
  margin-top: 40px;
  justify-content: center;
}

.navigation-links a {
  margin: 20px;
  border-radius: 4px;
  padding: 20px 15px;
  text-decoration: none;
  text-transform: capitalize;
}

.contact-link {
  background: var(--primary-color);
  box-shadow: var(--box-shadow);
  color: white;
}

.about-link {
  color: var(--primary-color);
  border: 1px solid var(--primary-color);
}

.homepage-link {
  color: var(--primary-color);
  text-align: center;
  display: block;
}

.about-paragraphs {
  display: flex;
  margin: 30px 0;
}

.about-paragraphs p {
  margin: 10px;
}

.email-link {
  display: flex;
  justify-content: center;
  color: var(--primary-color);
  font-size: 28px;
  text-decoration: none;
}

.email-link:hover {
  text-decoration: underline;
}

.primary-link {
  background-color: var(--primary-color);
  box-shadow: var(--box-shadow);
  color: white;

  margin: 20px;
  margin-left: 0;
  border-radius: 4px;
  padding: 20px 15px;
  text-decoration: none;
  text-transform: capitalize;
}

